[package]
name = "rust_math_test"
version = "0.1.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_math = { path = "rust_math" }

[[bin]]
name = "rust_math_test"
path = "main.rs"
